[package]
name = "hedge-bot"
version = "0.1.0"
authors = ["fromif <klee78736@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
tokio = { version = "1.19.2", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.17"
